--- a/Application/Home/View/AllInOne/module_xmcbgl.html
+++ b/Application/Home/View/AllInOne/module_xmcbgl.html
@@ -1097,7 +1097,7 @@
 <div id="module_xmcbgl" class="module">
     <h3><a href="#">项目成本管理</a></h3>
     <div>
-        <table>
+        <table jb_table="bordered">
             <tr>
                 <td>项目财务编号：</td>
                 <td><input type="text" id="ht_xmcwbh" name="ht_xmcwbh" jb_field="" readonly="true" /></td>
@@ -1115,7 +1115,7 @@
                 <td><span id="span_zj_sjmll"></span></td>
             </tr>
         </table>
-        <table>
+        <table jb_table="table1">
             <tr>
                 <td>&nbsp;</td>
                 <td style="width:50px;">&nbsp;</td>
