--- a/Application/Home/View/AllInOne/module_xmrlzygl.html
+++ b/Application/Home/View/AllInOne/module_xmrlzygl.html
@@ -155,7 +155,7 @@
                 市场部	市场经理	来自市场部	来自市场部	可输入文字说明	工作比默认为100%
                 市场部助理	来自市场部		可输入文字说明	无需设置工作比例
         -->
-        <table>
+        <table jb_table="bordered">
             <thead>
                 <tr>
                     <th>部门</th>
@@ -163,7 +163,7 @@
                     <th>人员</th>
                     <th>同一岗位多人员工作比</th>
                     <th>说明</th>
-                    <th></th>
+                    <th>显示/隐藏</th>
                 </tr>
             </thead>
             <tbody>
@@ -175,8 +175,9 @@
                 </td>
                 <td>100%</td>
                 <td>
-                    <textarea id="sc_rlzy_scjl_desc" name="sc_rlzy_scjl_desc"  jb_field="jb_single_save" cols="50" rows="2"></textarea>
+                    <textarea id="sc_rlzy_scjl_desc" name="sc_rlzy_scjl_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
+                <td></td>
             </tr>
             <tr>
                 <td>市场部</td>
@@ -187,6 +188,7 @@
                 <td>
                     <textarea id="sc_rlzy_sczl_desc" name="sc_rlzy_sczl_desc"  jb_field="jb_single_save" cols="50" rows="2"></textarea>
                 </td>
+                <td></td>
             </tr>
             <!--市场部------------------------------------------------------------------------------------------------------------>
             <!--预算部------------------------------------------------------------------------------------------------------------>
@@ -211,7 +213,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="ys_rlzy_ysy1_desc" name="ys_rlzy_ysy1_desc"  jb_field="jb_single_save" cols="50" rows="2"></textarea>
+                    <textarea id="ys_rlzy_ysy1_desc" name="ys_rlzy_ysy1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -236,7 +238,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="ys_rlzy_ysy2_desc" name="ys_rlzy_ysy2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="ys_rlzy_ysy2_desc" name="ys_rlzy_ysy2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -261,7 +263,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="ys_rlzy_ysy3_desc" name="ys_rlzy_ysy3_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="ys_rlzy_ysy3_desc" name="ys_rlzy_ysy3_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -288,7 +290,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="sj_rlzy_gjsjs1_desc" name="sj_rlzy_gjsjs1_desc"  jb_field="jb_single_save" cols="50" rows="2"></textarea>
+                    <textarea id="sj_rlzy_gjsjs1_desc" name="sj_rlzy_gjsjs1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -313,7 +315,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="sj_rlzy_gjsjs2_desc" name="sj_rlzy_gjsjs2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="sj_rlzy_gjsjs2_desc" name="sj_rlzy_gjsjs2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -338,7 +340,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="sj_rlzy_xgsjs1_desc" name="sj_rlzy_xgsjs1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="sj_rlzy_xgsjs1_desc" name="sj_rlzy_xgsjs1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -363,7 +365,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="sj_rlzy_xgsjs2_desc" name="sj_rlzy_xgsjs2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="sj_rlzy_xgsjs2_desc" name="sj_rlzy_xgsjs2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -388,7 +390,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="sj_rlzy_sgtfzr1_desc" name="sj_rlzy_sgtfzr1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="sj_rlzy_sgtfzr1_desc" name="sj_rlzy_sgtfzr1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -413,7 +415,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="sj_rlzy_sgtfzr2_desc" name="sj_rlzy_sgtfzr2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="sj_rlzy_sgtfzr2_desc" name="sj_rlzy_sgtfzr2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -438,7 +440,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="sj_rlzy_sgtfzr3_desc" name="sj_rlzy_sgtfzr3_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="sj_rlzy_sgtfzr3_desc" name="sj_rlzy_sgtfzr3_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -453,7 +455,7 @@
                     0%
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_xmzj_desc" name="gc_rlzy_xmzj_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_xmzj_desc" name="gc_rlzy_xmzj_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -478,7 +480,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_xmxc1_desc" name="gc_rlzy_xmxc1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_xmxc1_desc" name="gc_rlzy_xmxc1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -503,7 +505,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_xmxc2_desc" name="gc_rlzy_xmxc2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_xmxc2_desc" name="gc_rlzy_xmxc2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -528,7 +530,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_zxgz1_desc" name="gc_rlzy_zxgz1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_zxgz1_desc" name="gc_rlzy_zxgz1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -553,7 +555,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_zxgz2_desc" name="gc_rlzy_zxgz2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_zxgz2_desc" name="gc_rlzy_zxgz2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -578,7 +580,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_zxgz3_desc" name="gc_rlzy_zxgz3_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_zxgz3_desc" name="gc_rlzy_zxgz3_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -593,7 +595,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_aqy1_desc" name="gc_rlzy_aqy1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_aqy1_desc" name="gc_rlzy_aqy1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -608,7 +610,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_aqy2_desc" name="gc_rlzy_aqy2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_aqy2_desc" name="gc_rlzy_aqy2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -623,7 +625,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_aqy3_desc" name="gc_rlzy_aqy3_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_aqy3_desc" name="gc_rlzy_aqy3_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -638,7 +640,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_kfbj1_desc" name="gc_rlzy_kfbj1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_kfbj1_desc" name="gc_rlzy_kfbj1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -653,7 +655,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_kfbj2_desc" name="gc_rlzy_kfbj2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_kfbj2_desc" name="gc_rlzy_kfbj2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -667,7 +669,7 @@
                     0%
                 </td>
                 <td>
-                    <textarea id="gc_rlzy_gczl_desc" name="gc_rlzy_gczl_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="gc_rlzy_gczl_desc" name="gc_rlzy_gczl_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -682,7 +684,7 @@
                     0%
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_jdzfzr_desc" name="jd_rlzy_jdzfzr_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_jdzfzr_desc" name="jd_rlzy_jdzfzr_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -702,7 +704,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_ktxfjpssj1_desc" name="jd_rlzy_ktxfjpssj1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_ktxfjpssj1_desc" name="jd_rlzy_ktxfjpssj1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -722,7 +724,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_ktxfjpssj2_desc" name="jd_rlzy_ktxfjpssj2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_ktxfjpssj2_desc" name="jd_rlzy_ktxfjpssj2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -742,7 +744,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_ktxfjpssj3_desc" name="jd_rlzy_ktxfjpssj3_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_ktxfjpssj3_desc" name="jd_rlzy_ktxfjpssj3_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -762,7 +764,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_dqsj1_desc" name="jd_rlzy_dqsj1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_dqsj1_desc" name="jd_rlzy_dqsj1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -782,7 +784,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_dqsj2_desc" name="jd_rlzy_dqsj2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_dqsj2_desc" name="jd_rlzy_dqsj2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -802,7 +804,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_dqsj3_desc" name="jd_rlzy_dqsj3_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_dqsj3_desc" name="jd_rlzy_dqsj3_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -827,7 +829,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_jdgz1_desc" name="jd_rlzy_jdgz1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_jdgz1_desc" name="jd_rlzy_jdgz1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -852,7 +854,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_jdgz2_desc" name="jd_rlzy_jdgz2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_jdgz2_desc" name="jd_rlzy_jdgz2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -877,7 +879,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="jd_rlzy_jdgz3_desc" name="jd_rlzy_jdgz3_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="jd_rlzy_jdgz3_desc" name="jd_rlzy_jdgz3_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
@@ -904,7 +906,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="cg_rlzy_cgr1_desc" name="cg_rlzy_cgr1_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="cg_rlzy_cgr1_desc" name="cg_rlzy_cgr1_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td><a opt="add" href="#" style="text-decoration:none">+</a>&nbsp;&nbsp;&nbsp;<a opt="del" href="#" style="text-decoration:none">-</a></td>
             </tr>
@@ -929,7 +931,7 @@
                     </select>
                 </td>
                 <td>
-                    <textarea id="cg_rlzy_cgr2_desc" name="cg_rlzy_cgr2_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
+                    <textarea id="cg_rlzy_cgr2_desc" name="cg_rlzy_cgr2_desc"  jb_field="jb_single_save" ></textarea>
                 </td>
                 <td></td>
             </tr>
