--- a/Application/Home/View/AllInOne/module_xmsjgl.html
+++ b/Application/Home/View/AllInOne/module_xmsjgl.html
@@ -42,7 +42,7 @@
         中标日期		来自市场部	可输入文字说明
         合同签订日期		来自市场部	可输入文字说明
 -->
-        <table>
+        <table jb_table="bordered">
             <tr >
                 <td>发标日期：<INPUT type="text" id="sc_fb_time" name="sc_fb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
                 <td>说明:
@@ -80,7 +80,7 @@
                 </td>
             </tr>
         </table>
-        <table>
+        <table jb_table="bordered">
             <thead>
             <tr>
                 <th>项目里程牌</th>
