--- a/Application/Home/View/AllInOne/module_xmzjlgl.html
+++ b/Application/Home/View/AllInOne/module_xmzjlgl.html
@@ -697,7 +697,7 @@
             项目合同金额	来自预算部	客户合同到账金额
             项目结算金额	来自预算部	客户合同到账金额占结算金额比例
             -->
-            <table>
+            <table jb_table="bordered">
                 <tr >
                     <td>项目合同金额：
                         {$ys_hetong_amt}
