--- a/Application/Home/View/AllInOne/module_xmjbxx.html
+++ b/Application/Home/View/AllInOne/module_xmjbxx.html
@@ -3,6 +3,9 @@
         $("#sc_mag_company_base").on('change',function(){
             $("#sc_mag_company").val($(this).val());
         });
+
+        //$.Zebra_TransForm($('#sc_mag_company_base'));
+        //$("#sc_ss_fgs").chosen();
     });
 </script>
 <div id="module_xmjbxx"  class="module">
@@ -18,16 +21,22 @@
         项目面积	来自预算部	合同金额	来自预算部-->
 <!--        <fieldset>
             <legend>health information</legend>-->
-        <table>
+        <table jb_table="bordered">
             <tr>
-                <td>项目编号：{$pro_id}</td>
-                <td>项目名称: {$sc_pro_name}</td>
+                <td><label>项目编号： </label></td><td>{$pro_id}</td>
+                <td><label>项目名称:  </label></td><td>{$sc_pro_name}</td>
             </tr>
 
             <tr>
-                <td>财务编号：<input type="text" id="ht_xmcwbh" name="ht_xmcwbh" jb_field="jb_single_save"/></td>
-                <td>项目实施分公司:
-                    <select id="sc_ss_fgs" name="sc_ss_fgs" jb_field="jb_single_save"  >
+                <td>
+                    <label for="ht_xmcwbh">财务编号：</label>
+                </td>
+                <td>
+                    <input type="text" id="ht_xmcwbh" name="ht_xmcwbh" jb_field="jb_single_save"/>
+                </td>
+                <td>项目实施分公司:</td>
+                <td>
+                    <select id="sc_ss_fgs" name="sc_ss_fgs"  jb_field="jb_single_save"  >
                         <option value="0" selected="selected">请选择</option>
                         <option value="A">北京公司</option>
                         <option value="B">上海分公司</option>
@@ -40,8 +49,8 @@
                 </td>
             </tr>
             <tr>
-                <td>客户名称:<INPUT type="text" id="sc_cus_name" name="sc_cus_name"  jb_field="jb_single_save" /></td>
-                <td>客户类别2:
+                <td>客户名称:</td><td><INPUT type="text" id="sc_cus_name" name="sc_cus_name"  jb_field="jb_single_save" /></td>
+                <td>客户类别2:</td><td>
                     <select id="sc_cus_t_2" name="sc_cus_t_2" jb_field="jb_single_save" >
                         <option value="0" selected="selected">请选择</option>
                         <option value="A">质量敏感性</option>
@@ -51,7 +60,7 @@
                 </td>
             </tr>
             <tr>
-                <td>管理公司:
+                <td>管理公司:</td><td>
                     <div>
                     选择:
                     <select id="sc_mag_company_base" name="sc_mag_company_base">
@@ -66,7 +75,7 @@
                     <INPUT type="text" id="sc_mag_company" name="sc_mag_company"  jb_field="jb_single_save" />
                     </div>
                 </td>
-                <td>中标状态:
+                <td>中标状态:</td><td>
                     <select id="sc_zb_flag" name="sc_zb_flag"  jb_field="jb_single_save" >
                         <option value="0" selected="selected">请选择</option>
                         <option value="A">落标</option>
@@ -75,8 +84,8 @@
                 </td>
             </tr>
             <tr>
-                <td>项目类别:
-                    <select id="sc_pro_type" name="sc_pro_type"  jb_field="jb_select_save" >
+                <td>项目类别:</td><td>
+                    <select id="sc_pro_type" name="sc_pro_type"  jb_field="jb_single_save" >
                         <option value="0" selected="selected">请选择</option>
                         <option value="A">设计</option>
                         <option value="B">施工</option>
@@ -87,9 +96,9 @@
                         <option value="G">BOT</option>
                     </select>
                 </td>
-                <td>投标类别:
-                    <select id="sc_invest_type" name="sc_invest_type"  jb_field="jb_select_save" >
-                        <option value="0" selected="selected">请选择</option>
+                <td>投标类别:</td><td>
+                    <select id="sc_invest_type" name="sc_invest_type"  jb_field="jb_single_save" >
+                        <option value="" selected="selected">请选择</option>
                         <option value="A">框架协议</option>
                         <option value="B">意向协商</option>
                         <option value="C">投标</option>
@@ -97,17 +106,17 @@
                 </td>
             </tr>
             <tr>
-                <td>项目城市:<input type="text"  id="sc_pro_city" name="sc_pro_city"   jb_field="jb_single_save" /></td>
-                <td>项目地点:<input type="text"  id="sc_pro_address" name="sc_pro_address"   jb_field="jb_single_save" /></td>
+                <td>项目城市:</td><td><input type="text"  id="sc_pro_city" name="sc_pro_city"   jb_field="jb_single_save" /></td>
+                <td>项目地点:</td><td><input type="text"  id="sc_pro_address" name="sc_pro_address"   jb_field="jb_single_save" /></td>
             </tr>
 
             <tr>
-                <td>开工日期:{$gc_kg_jh_time}</td>
-                <td>完工日期:{$gc_xmwg_khys_jh_time}</td>
+                <td>开工日期:</td><td>{$gc_kg_jh_time}</td>
+                <td>完工日期:</td><td>{$gc_xmwg_khys_jh_time}</td>
             </tr>
             <tr>
-                <td>项目面积:<input type="text"  id="ys_xm_mj" name="ys_xm_mj"   jb_field="jb_single_save" /></td>
-                <td>合同金额:<input type="text"  id="ys_hetong_amt" name="ys_hetong_amt"   jb_field="jb_single_save" /></td>
+                <td>项目面积:</td><td><input type="text"  id="ys_xm_mj" name="ys_xm_mj"   jb_field="jb_single_save" /></td>
+                <td>合同金额:</td><td><input type="text"  id="ys_hetong_amt" name="ys_hetong_amt"   jb_field="jb_single_save" /></td>
             </tr>
         </table>
 <!--        </fieldset>-->
