--- a/Application/Home/View/AllInOne/module_xmscfx.html
+++ b/Application/Home/View/AllInOne/module_xmscfx.html
@@ -20,7 +20,6 @@
         });
         //
 */
-
     });
 </script>
 <div id="module_xmscfx"  class="module">
@@ -29,10 +28,10 @@
 <!--    项目行业	来自市场部	客户类型	来自市场部
         竞争对手	来自市场部	中标策略分析会	来自市场部
         落标原因	来自市场部	中标原因	来自市场部-->
-        <table>
+        <table jb_table="bordered">
             <tr>
                 <td>
-                    项目行业:
+                    项目行业:</td><td>
                     <div>
                     选择:
                     <select id="sc_pro_trade_base" name="sc_pro_trade_base" >
@@ -54,7 +53,7 @@
                     <INPUT type="text" id="sc_pro_trade" name="sc_pro_trade"  jb_field="jb_single_save" />
                     </div>
                 </td>
-                <td>客户类别1:
+                <td>客户类别1:</td><td>
                     <select id="sc_cus_t_1" name="sc_cus_t_1" jb_field="jb_single_save" >
                         <option value="0" selected="selected">请选择</option>
                         <option value="A">单价：每平米小于2000</option>
@@ -65,7 +64,7 @@
             </tr>
             <tr>
                 <td>
-                    竞争对手:
+                    竞争对手:</td><td>
                     <div>
                     选择:
                     <select id="sc_compety_company_base" name="sc_compety_company_base" multiple="multiple" jb_field="multiple" >
@@ -81,7 +80,7 @@
                     <a id="sc_compety_company" jb_field="jb_select_save" >...存盘...</a>
                     </div>
                 </td>
-                <td>中标策略分析会:
+                <td>中标策略分析会:</td><td>
                     <select id="sc_tbcl_fxh" name="sc_tbcl_fxh"  jb_field="jb_select_save" >
                         <option value="0" selected="selected">请选择</option>
                         <option value="Y">Y</option>
@@ -90,7 +89,7 @@
                 </td>
             </tr>
             <tr>
-                <td>落标原因:
+                <td>落标原因:</td><td>
                     <div>
                     选择:
                     <select id="sc_lb_reason_base" name="sc_lb_reason_base" multiple="multiple" jb_field="multiple" >
@@ -107,7 +106,7 @@
                     <a id="sc_lb_reason" jb_field="jb_select_save" >...存盘...</a>
                     </div>
                 </td>
-                <td>中标原因:
+                <td>中标原因:</td><td>
                     <div>
                     选择:
                     <select id="sc_zb_reason_base" name="sc_zb_reason_base" multiple="multiple" jb_field="multiple" >
