not use base.css style.css

--- a/Application/Home/View/AllInOne/east.html
+++ b/Application/Home/View/AllInOne/east.html
@@ -91,7 +91,7 @@
 </script>
 <div>
     <div>
-        <INPUT type="text" id="user_department" name="user_department" value="{$user_department}" >
+        <INPUT type="hidden" id="user_department" name="user_department" value="{$user_department}" >
     </div>
 </div>
 
