--- a/Application/Home/View/AllInOne/module_khbyd.html
+++ b/Application/Home/View/AllInOne/module_khbyd.html
@@ -51,7 +51,7 @@
                         <td>{$sub}</td>
                         <td>
                             <select id="sc_sj_myd_{$key}" name="sc_sj_myd_{$key}"  jb_myd_select="sj" jb_field="jb_single_save" >
-                                <option value="0" selected="selected">请选择</option>
+                                <option value="" selected="selected">请选择</option>
                                 <option value="A">非常满意</option>
                                 <option value="B">满意</option>
                                 <option value="C">基本满意</option>
@@ -69,7 +69,7 @@
                         <td>{$sub}</td>
                         <td>
                             <select id="sc_sg_myd_{$key}" name="sc_sg_myd_{$key}"  jb_myd_select="sg" jb_field="jb_single_save" >
-                                <option value="0" selected="selected">请选择</option>
+                                <option value="" selected="selected">请选择</option>
                                 <option value="A">非常满意</option>
                                 <option value="B">满意</option>
                                 <option value="C">基本满意</option>
@@ -87,7 +87,7 @@
                         <td>{$sub}</td>
                         <td>
                             <select id="sh_sh_myd_{$key}" name="sh_sh_myd_{$key}"  jb_myd_select="sh" jb_field="jb_single_save" >
-                                <option value="0" selected="selected">请选择</option>
+                                <option value="" selected="selected">请选择</option>
                                 <option value="A">非常满意</option>
                                 <option value="B">满意</option>
                                 <option value="C">基本满意</option>
