--- a/Application/Home/View/AllInOne/module_xmscfx.html
+++ b/Application/Home/View/AllInOne/module_xmscfx.html
@@ -1,10 +1,9 @@
 <script type="text/javascript">
     $(document).ready(function() {
-/*
-        //
         $("#sc_pro_trade_base").on('change',function(){
             $("#sc_pro_trade").val($(this).find('option:selected').text());
         });
+/*
         //
         $("#sc_compety_company_base").on('change',function(){
             $('#sc_compety_company').tagit('removeAll');
@@ -47,10 +46,9 @@
                         <option value="I">零售</option>
                         <option value="J">日用品</option>
                         <option value="K">咨询</option>
-                        <option value="其它">其它</option>
                     </select>
                     <br>
-                    <INPUT type="text" id="sc_pro_trade" name="sc_pro_trade"  jb_field="jb_single_save" />
+                    其它:<INPUT type="text" id="sc_pro_trade" name="sc_pro_trade"  jb_field="jb_single_save" />
                     </div>
                 </td>
                 <td>客户类别1:</td><td>
