--- a/Application/Home/View/AllInOne/module_xmsjgl.html
+++ b/Application/Home/View/AllInOne/module_xmsjgl.html
@@ -44,42 +44,55 @@
 -->
         <table jb_table="bordered">
             <tr >
-                <td>发标日期：<INPUT type="text" id="sc_fb_time" name="sc_fb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
+                <td>发标日期：</td>
+                <td><INPUT type="text" id="sc_fb_time" name="sc_fb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:</td>
+                <td>
                     <textarea id="sc_fb_time_desc" name="sc_fb_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
-                <td>设计方案提交日期：<INPUT type="text" id="sj_sjfatj_time" name="sj_sjfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
+                <td>设计方案提交日期：</td>
+                <td><INPUT type="text" id="sj_sjfatj_time" name="sj_sjfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:</td>
+                <td>
                     <textarea id="sj_sjfatj_time_desc" name="sj_sjfatj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
-                <td>机电方案提交日期：<INPUT type="text" id="jd_jdfatj_time" name="jd_jdfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
+                <td>机电方案提交日期：</td>
+                <td><INPUT type="text" id="jd_jdfatj_time" name="jd_jdfatj_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:</td>
+                <td>
                     <textarea id="jd_jdfatj_time_desc" name="jd_jdfatj_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
-                <td>回标日期：<INPUT type="text" id="sc_hb_time" name="sc_hb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
+                <td>回标日期：</td>
+                <td><INPUT type="text" id="sc_hb_time" name="sc_hb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:</td>
+                <td>
                     <textarea id="sc_hb_time_desc" name="sc_hb_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
-                <td>中标日期：<INPUT type="text" id="sc_zb_time" name="sc_zb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
+                <td>中标日期：</td>
+                <td><INPUT type="text" id="sc_zb_time" name="sc_zb_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:</td>
+                <td>
                     <textarea id="sc_zb_time_desc" name="sc_zb_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
             <tr>
-                <td>合同签订日期：<INPUT type="text" id="sc_htqd_time" name="sc_htqd_time"  jb_time_field="" jb_field="jb_single_save" /></td>
-                <td>说明:
+                <td>合同签订日期：</td>
+                <td><INPUT type="text" id="sc_htqd_time" name="sc_htqd_time"  jb_time_field="" jb_field="jb_single_save" /></td>
+                <td>说明:</td>
+                <td>
                     <textarea id="sc_htqd_time_desc" name="sc_htqd_time_desc"  jb_field="jb_single_save" cols="50" rows="1"></textarea>
                 </td>
             </tr>
         </table>
+        <br>
         <table jb_table="bordered">
             <thead>
             <tr>
@@ -307,6 +320,7 @@
                 </td>
             </tr>
         </table>
+        <br>
         <div>
             <div id="sjglchartContainer">FusionCharts XT will load here!</div>
         </div>
