--- a/Application/Home/View/AllInOne/module_xmzjlgl.html
+++ b/Application/Home/View/AllInOne/module_xmzjlgl.html
@@ -699,29 +699,36 @@
             -->
             <table jb_table="bordered">
                 <tr >
-                    <td>项目合同金额：
+                    <td>项目合同金额：</td>
+                    <td>
                         {$ys_hetong_amt}
                     </td>
-                    <td>客户合同到账金额:
+                    <td>客户合同到账金额:</td>
+                    <td>
                         <span id="custom_hetong_dzje"></span>
                     </td>
                 </tr>
                 <tr>
-                    <td>项目结算金额：
+                    <td>项目结算金额：</td>
+                    <td>
                         <span id="hetong_js_zje"></span>
                     </td>
-                    <td>客户合同到账金额占结算金额比例:
+                    <td>客户合同到账金额占结算金额比例:</td>
+                    <td>
                         <span id="custom_hetong_dzje_rate"></span>
                     </td>
                 </tr>
                 <tr>
-                    <td>分包合同总金额：
+                    <td>分包合同总金额：</td>
+                    <td>
                         <span id="fb_hetong_zje"></span>
                     </td>
                     <td>
                     </td>
+                    <td></td>
                 </tr>
             </table>
+            <br>
         </div>
         <div>
             <table id="zjlsksj"></table>
