--- a/Application/Home/View/AllInOne/index.html
+++ b/Application/Home/View/AllInOne/index.html
@@ -207,7 +207,7 @@
 </head>
 <body>
 
-<div id="RightPane" class="ui-layout-center ui-helper-reset ui-widget-content">Center
+<div id="RightPane" class="ui-layout-center ui-helper-reset ui-widget-content">
     <table>
         <tr>
             <td>
@@ -252,8 +252,8 @@
         </div>
     </div>
 </div>
-<div class="ui-layout-north">North</div>
-<div class="ui-layout-south">South</div>
+<div class="ui-layout-north"></div>
+<div class="ui-layout-south"></div>
 <div class="ui-layout-east">
     <include file="east" />
 </div>
