--- a/Application/Home/View/AllInOne/module_xmjbxx.html
+++ b/Application/Home/View/AllInOne/module_xmjbxx.html
@@ -37,7 +37,7 @@
                 <td>项目实施分公司:</td>
                 <td>
                     <select id="sc_ss_fgs" name="sc_ss_fgs"  jb_field="jb_single_save"  >
-                        <option value="0" selected="selected">请选择</option>
+                        <option value="" selected="selected">请选择</option>
                         <option value="A">北京公司</option>
                         <option value="B">上海分公司</option>
                         <option value="C">广深办事处</option>
@@ -52,7 +52,7 @@
                 <td>客户名称:</td><td><INPUT type="text" id="sc_cus_name" name="sc_cus_name"  jb_field="jb_single_save" /></td>
                 <td>客户类别2:</td><td>
                     <select id="sc_cus_t_2" name="sc_cus_t_2" jb_field="jb_single_save" >
-                        <option value="0" selected="selected">请选择</option>
+                        <option value="" selected="selected">请选择</option>
                         <option value="A">质量敏感性</option>
                         <option value="B">成本敏感型</option>
                         <option value="C">平衡性</option>
@@ -64,7 +64,7 @@
                     <div>
                     选择:
                     <select id="sc_mag_company_base" name="sc_mag_company_base">
-                        <option value="None" >None</option>
+                        <option value="" >None</option>
                         <option value="JLL">JLL</option>
                         <option value="CBRE">CBRE</option>
                         <option value="DTZ">DTZ</option>
@@ -72,12 +72,12 @@
                         <option value="CUSHMAN">CUSHMAN</option>
                     </select>
                     <br>
-                    <INPUT type="text" id="sc_mag_company" name="sc_mag_company"  jb_field="jb_single_save" />
+                    其它:<INPUT type="text" id="sc_mag_company" name="sc_mag_company"  jb_field="jb_single_save" />
                     </div>
                 </td>
                 <td>中标状态:</td><td>
                     <select id="sc_zb_flag" name="sc_zb_flag"  jb_field="jb_single_save" >
-                        <option value="0" selected="selected">请选择</option>
+                        <option value="" selected="selected">请选择</option>
                         <option value="A">落标</option>
                         <option value="B">中标</option>
                     </select>
@@ -86,7 +86,7 @@
             <tr>
                 <td>项目类别:</td><td>
                     <select id="sc_pro_type" name="sc_pro_type"  jb_field="jb_single_save" >
-                        <option value="0" selected="selected">请选择</option>
+                        <option value="" selected="selected">请选择</option>
                         <option value="A">设计</option>
                         <option value="B">施工</option>
                         <option value="C">设计施工</option>
