--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -32,8 +32,10 @@
     <!--jquery lib-->
     <script src="__PUBLIC__/js/Lib/jquery.form.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/ztree/jquery.ztree.all-3.5.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/textareaCounter/jquery.textareaCounter.plugin.js" type="text/javascript"></script>
-    <script src="__PUBLIC__/js/Lib/elastic/jquery.elastic.source.js" type="text/javascript"></script>
+    <!--textareaCounter-->
+    <!--<script src="__PUBLIC__/js/Lib/textareaCounter/jquery.textareaCounter.plugin.js" type="text/javascript"></script>-->
+    <!--elastic-->
+    <!--<script src="__PUBLIC__/js/Lib/elastic/jquery.elastic.source.js" type="text/javascript"></script>-->
     <script src="__PUBLIC__/js/jquery.selfutil.js" type="text/javascript"></script>
     <!--jquery lib pnotify-->
     <script src="__PUBLIC__/js/Lib/pnotify/pnotify.core.js" type="text/javascript"></script>
@@ -47,9 +49,9 @@
     <!--fusioncharts -->
     <script src="__PUBLIC__/js/Lib/FusionCharts/Charts/FusionCharts.js" type="text/javascript"></script>
     <!--jquery.sexy-combo-->
-    <script src="__PUBLIC__/js/Lib/jquery.sexy-combo/jquery.sexy-combo.js" type="text/javascript"></script>
+    <!--<script src="__PUBLIC__/js/Lib/jquery.sexy-combo/jquery.sexy-combo.js" type="text/javascript"></script>-->
     <!--tag-it-->
-    <script src="__PUBLIC__/js/Lib/tag-it/js/tag-it.js" type="text/javascript"></script>
+    <!--<script src="__PUBLIC__/js/Lib/tag-it/js/tag-it.js" type="text/javascript"></script>-->
     <!--Zebra_TransForm-->
     <!--<script src="__PUBLIC__/js/Lib/Zebra_TransForm/zebra_transform.js" type="text/javascript"></script>-->
     <!--easydropdown-->
@@ -61,8 +63,8 @@
         $.jgrid.useJSON = true;
     </script>
 
-    <link rel="stylesheet" href="__PUBLIC__/style/base.css" type="text/css" />
-    <link rel="stylesheet" href="__PUBLIC__/style/style.css" type="text/css" />
+    <!--<link rel="stylesheet" href="__PUBLIC__/style/base.css" type="text/css" />-->
+   <!-- <link rel="stylesheet" href="__PUBLIC__/style/style.css" type="text/css" />-->
     <!--jquery  ui custom  css -->
     <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/redmond_1.8.24/jquery-ui.css" />-->
     <!--<link rel="stylesheet" type="text/css" media="screen" href="__PUBLIC__/style/themes/swanky-purse_1.10.4/jquery-ui-1.10.4.custom.css" />-->
@@ -81,12 +83,12 @@
     <!-- Oxygen Icons -->
    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/pnotify/oxygen/icons.css" />
     <!--jquery.sexy-combo-->
-    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/sexy-combo.css" />
-    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/sexy/sexy.css" />
-    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/custom/custom.css" />
+    <!--<link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/sexy-combo.css" />-->
+    <!--<link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/sexy/sexy.css" />-->
+    <!--<link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/jquery.sexy-combo/css/custom/custom.css" />-->
     <!--tag-it-->
-    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/tag-it/css/jquery.tagit.css" />
-    <link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/tag-it/css/tagit.ui-zendesk.css" />
+    <!--<link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/tag-it/css/jquery.tagit.css" />-->
+    <!--<link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/tag-it/css/tagit.ui-zendesk.css" />-->
     <!--Zebra_TransForm-->
     <!--<link rel="stylesheet" type="text/css"  href="__PUBLIC__/js/Lib/Zebra_TransForm/css/zebra_transform.css" />-->
     <!--easydropdown-->
@@ -311,9 +313,9 @@ table.imagetable td {
     text-shadow: 0 1px 0 rgba(255,255,255,.5);
 }
 
-.bordered td:first-child, .bordered th:first-child {
+/*.bordered td:first-child, .bordered th:first-child {
     border-left: none;
-}
+}*/
 
 .bordered th:first-child {
     -moz-border-radius: 6px 0 0 0;
@@ -436,9 +438,11 @@ table.table1{
 }
 
 
-select { width:150px; height:24px;}
+/*
+select { width:150px; height:18px;}
 #sleHid { display:block; width:150px; overflow:hidden; }
-#sleBG { width:150px; height:24px; border:#61AC36 1px solid; border-right:none; background:url(arrow.gif) #fff no-repeat 62px 1px; display:block;}
+#sleBG { width:150px; height:18px; border:#61AC36 1px solid; border-right:none; background:url(arrow.gif) #fff no-repeat 62px 1px; display:block;}
+*/
 
 
     </style>
